--- a/plant_care/blueprints/plantcare_v1.0.0.yaml
+++ b/plant_care/blueprints/plantcare_v1.0.0.yaml
@@ -46,15 +46,10 @@ blueprint:
       default: "18:00:00"
       selector:
         time:
-    alert:
-      name: Alert Text
-      description: Input text entity that stores the current alert message
-      selector:
-        entity:
-          domain: input_text
+
  
 trigger:
   - platform: time_pattern
     minutes: "/15"
   - platform: time
-    at: !input alert
+    at: !input alert_time
