--- a/plant_care/blueprints/plantcare_v1.0.0.yaml
+++ b/plant_care/blueprints/plantcare_v1.0.0.yaml
@@ -12,6 +12,9 @@ blueprint:
             - Chili
             - Citrus
             - Ficus
+            - dummy
+            - dummy2
+
 
     growth_stage:
       name: Growth Stage
